<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.android.quizapp.MainActivity">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textStyle="italic"
            android:text="@string/welcome_message"
            android:textSize="25sp"
            android:padding="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/n1"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/q1"
                android:textSize="20sp" />

        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="105dp"
            android:layout_marginStart="105dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/stone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/sand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/blue"
                android:layout_marginTop="5dp"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/green"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/yellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yellow"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:textSize="20sp" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/n2"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/q2"
                android:textSize="20sp"/>

        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/Nitrogen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Nitrogen"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/Hydrogen2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Hydrogen"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/Carbon_dioxide2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Carbon_dioxide"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/Oxygen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Oxygen"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:textSize="20sp" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/n3"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/q3"
                android:textSize="20sp" />

        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/Calcium_bicarbonate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Calcium_bicarbonate"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/Sodiumcarbonate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/Sodium_carbonate"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/Sodium_bicarbonate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sodium_bicarbonate"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/Calcium_carbonate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/Calcium_carbonate"
                android:textSize="20sp" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/n4"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/q4"
                android:textSize="20sp" />

        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/Methane"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Methane"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/Nitrous_oxide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Nitrous_oxide"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/Hydrogen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Hydrogen"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/Carbon_dioxide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Carbon_dioxide"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:textSize="20sp" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/n5"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/q5"
                android:textSize="20sp" />

        </LinearLayout>

        <RadioButton
            android:id="@+id/Gold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="105dp"
            android:layout_marginStart="105dp"
            android:text="@string/Gold"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/Diamond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="105dp"
            android:layout_marginStart="105dp"
            android:text="@string/Diamond"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/Iron"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="105dp"
            android:layout_marginStart="105dp"
            android:text="@string/Iron"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/Platinum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="105dp"
            android:layout_marginStart="105dp"
            android:text="@string/Platinum"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"/>

        <EditText
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:inputType="text"/>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textColor="@android:color/white"
            android:layout_margin="15dp"
            android:background="@color/colorPrimary"
            android:text="@string/submit"
            android:onClick="submitAnswer"/>

    </LinearLayout>


</ScrollView>
