<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/intro"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:background="@color/colorAccent"
            android:padding="8dp"
            android:text="@string/description"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:background="@color/colorAccent">

            <EditText
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_above="@+id/take_quiz"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="254dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimary"
                android:hint="@string/fill_name"
                android:inputType="text"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:autofillHints="" />

            <Button
                android:id="@+id/take_quiz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="15dp"
                android:background="@color/colorPrimary"
                android:text="@string/take_quiz"
                android:textColor="@android:color/white"
                android:textSize="28sp" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>